extracted constants and made pkl file

--- a/salaryPredictor.ipynb
+++ b/salaryPredictor.ipynb
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1497,7 @@
        "0.9674149327105692"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,10 +1508,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(pipe,open(\"SalaryPredictor.pkl\",\"wb\"))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fake = {\n",
+    "   \"job_role\":\"Digital Marketer\",\n",
+    "   \"attendance\":87,\n",
+    "   \"department\":\"Sales and Marketing\",\n",
+    "   \"Post\":\"Mid-Level/Intermediate\",\n",
+    "   \"Equity(in %)\": 0.6,\n",
+    "   \"Experience(in years)\": 5,\n",
+    "   \"nClients\": 23,\n",
+    "   \"test_scores(out of 100)\": 77,\n",
+    "   \"skills\": [\"Leadership and Mentoring\",\"Relationship Building and Networking\",\"Negotiation and Persuasion\",\"Product/Service Positioning and Branding\",\"Market Research and Analysis\"]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_cols = [\"job_role\",\"attendance\",\"department\",\"Post\",\"Equity(in %)\",\"Experience(in years)\",\"nClients\",\"test_scores(out of 100)\"]\n",
+    "all_cols.extend(all_skills)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employee_data = [[]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in all_cols:\n",
+    "   if(i in fake):\n",
+    "      employee_data[0].append(fake[i]);\n",
+    "   elif(i not in fake and i not in fake[\"skills\"]):\n",
+    "      employee_data[0].append(0);\n",
+    "   elif(i in fake[\"skills\"]):\n",
+    "      employee_data[0].append(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([95100.7109375])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe.predict(pd.DataFrame(employee_data, columns=all_cols))"
+   ]
   }
  ],
  "metadata": {
